# frickle

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.claude/: settings.json
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: ahnlich.py  artifacts.py  classify.py  config.py  db.py  deps.py  embedding.py  logging_mw.py  main.py  schemas.py  state.py
backend/app/routes/: __init__.py  health.py  meta.py  sync.py  transactions.py
backend/app/services/: feed.py  process.py  sync.py
backend/scripts/: loadtest.py
backend/tests/: conftest.py  test_api.py  test_classify.py  test_embedding.py  test_pipeline_contract.py
backend/worker/: retrain.py
docs/: FRAUD_ENGINEER_NOTES.md
pipeline/: pyproject.toml
pipeline/feature_pipeline/: __init__.py  constants.py  embedders.py  pipeline.py  version.py
pipeline/tests/: test_skew.py
